fix footer on mobile

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,7 +5,9 @@ footer {
     padding: 3rem 1rem 1rem;
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 0.25rem;
 }
 
 footer small {
